ibkr must be fixed, tested
test on random data
Webull
pot manager
tuner.py needs to be refactored
setup and 'strategy' and livetest
evaluation_utils changed to metrics
Webull missing paper-live and symbols for client constructor
Binance still using symbol based freq
Binance passes balance for broker, __init__ signatures has to be identical

Code coverage
unwebull


Plot removed
Gspread removed
yahoo removed
ports removed
cloud storage removed
sheets.py removed
sock messenger removed !!! Binance Server has to be updated
