@@ -1,37 +1,11 @@
 #!/usr/bin/python3
 import os
 import sys
-data = " ".join(sys.argv[1:])
-
 import socket
 
-
-
-# Create a client socket
-
+data = " ".join(sys.argv[1:])
 clientSocket = socket.socket(socket.AF_INET, socket.SOCK_STREAM);
-
-
-
-# Connect to the server
-
 clientSocket.connect(("127.0.0.1",3003));
-
-
-
-# Send data to server
-
-
 clientSocket.send(data.encode());
-
-
-
-# Receive data from server
-
 dataFromServer = clientSocket.recv(1024);
-
-
-
-# Print to the console
-
 print(dataFromServer.decode());
